--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-medium-image-zoom": "4.3.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-test-renderer": "16.13.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
